[workspace]
resolver = "2"
members = [
    "lib/armv9a",
    "lib/cca-token",
    "lib/cose",
    "lib/io",
    "lib/rsi-el0",
    "lib/safe-abstraction",
    "lib/uart",
    "lib/vmsa",
    "plat/fvp",
    "realm/rsi-test",
    "rmm/",
    "sdk",
    "model-checking",
]

exclude = [
    "lib/unsafe-analyzer",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
